# Code

./: .clang-format  .devcontainer.json  .gitignore  learn1.cpp  test.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c
Aha/: 1.cpp  1t.cpp  2.cpp  2t.cpp  3.cpp  4.cpp  5.cpp  t.cpp
CompilerTest/: Mini_Compiler  Mini_Compiler.c  Recursive_Descent_Parser.c
HelloAL/: 1.cpp  2.cpp  3.cpp  4.2.cpp  4.3  4.3.cpp
Homework/: 3.py  LearnMatrix.py  linalg_demo.py  test1.c  test2.c  week1.c  week1.py  week2.c  week2.py  week3.c  week3.py  week4.c  week4.py  week5.c  week5.py  week6.c  week7.c  week8.c
Homework_S1/: linalg_domo.py  test1.c  week1.c  week3.c  week3.py  week4.py  week5.py  week6.c  week7.c
Learn/: learn1.cpp  test10.c  test11.c  test5.c
LearnAL/: 1.cpp  2.cpp  3.cpp
LearnAL_3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  t1_2.cpp  t2.cpp
LearnAL_New/: 1.cpp  2.cpp  2_1.cpp  3.cpp
LearnC/: test11.c  test2.c  test8.c
LearnCPP/: 1.cpp  2.cpp  2_1.cpp  3.cpp  4.cpp  5.cpp  6.cpp
LearnDS/: 1.cpp
LearnDS_HBPU/: 0.1_myList  0.1_myList.cpp  0.2_myLinkList.cpp  0.3_myStack.cpp  0.4_myQueue  0.4_myQueue.cpp  0.5_myString.cpp  week1.cpp
LearnPY/: 1.py  2.py  3.py  4.py  5.py  6.py  test_sync.py
LearnPython/: 1.py  2.py  tempCodeRunnerFile.py
LearnRust/: 1_Hello_World  1_Hello_World.rs  2_var  2_var.rs  _test  _test.rs  test  test.rs
Learn_Java/: a.java
Luogu/: 1_P1303.cpp  1_P1303_Test.cpp  2_P1009.cpp  3.cpp  4.cpp  5.cpp  6.cpp  P1046.c  P1093.c  (+6 more)
lifes_been_good_project/android/app/src/main/cpp/: CMakeLists.txt
(+362 files in other folders)
